--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-md mx-auto p-6 mt-10 bg-white rounded shadow-md">
   <h2 class="text-2xl font-bold mb-4 text-center text-blue-600">Login</h2>
 
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-4">
+  <form [formGroup]="loginForm" (ngSubmit)="onLogin()" class="space-y-4">
     <div>
       <label class="block font-medium">Username</label>
       <input formControlName="username" class="w-full border rounded p-2" />
@@ -16,8 +16,15 @@
       Invalid credentials. Please try again.
     </div>
 
-    <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
+    <button type="submit" class="w-full bg-blue-300 text-white py-2 rounded hover:bg-blue-700">
       Login
     </button>
   </form>
+</div>
+
+<div class="max-w-md mx-auto p-6 mt-10 bg-white rounded shadow-md">
+  <h2 class="text-1xl font-bold mb-4 text-center text-green-600">Register New User</h2>
+  <button type="submit" class="w-full bg-green-300 text-white py-2 rounded hover:bg-green-700" (click)="register()">
+    Sign in
+  </button>
 </div>
