--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -34,5 +34,6 @@
     <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
       Register
     </button>
+    <a routerLink="../login" class="ml-8 hover:underline text-blue-700">Already have Account! Log in ?</a>
   </form>
 </div>
