--- a/src/app/components/technician/assigned-jobs/assigned-jobs.component.html
+++ b/src/app/components/technician/assigned-jobs/assigned-jobs.component.html
@@ -7,6 +7,7 @@
         <th class="border px-4 py-2">#</th>
         <th class="border px-4 py-2">Customer</th>
         <th class="border px-4 py-2">Product</th>
+        <th class="border px-4 py-2">Description</th>
         <th class="border px-4 py-2">Urgency</th>
         <th class="border px-4 py-2">Status</th>
         <th class="border px-4 py-2">Action</th>
@@ -17,6 +18,7 @@
         <td class="border px-4 py-2">{{ i + 1 }}</td>
         <td class="border px-4 py-2">{{ req.name }}</td>
         <td class="border px-4 py-2">{{ req.product }}</td>
+        <td class="border px-4 py-2">{{ req.description }}</td>
         <td class="border px-4 py-2 capitalize">{{ req.urgency }}</td>
         <td class="border px-4 py-2 capitalize">{{ req.status }}</td>
         <td class="border px-4 py-2 space-x-2">
