--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -15,8 +15,8 @@
 
   <!-- Right: Role Display -->
   <div class="flex items-center space-x-2">
-    <span class="text-sm">Role:</span>
-    <span class="text-sm italic text-white">({{ role }})</span>
+    <span class="text-sm">{{ role }}:</span>
+    <span class="text-sm italic text-white">{{ name }}</span>
   </div>
   <!-- Right: Logout Button -->
   <button (click)="logout()" class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">
