--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -24,7 +24,7 @@
     Logout
   </button>
   }@else {
-  <a routerLink="/login" class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">
+  <a *ngIf="currentPage() !== '/login'" routerLink="/login" class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">
     Login
   </a>  
   }
